--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /Build
+Bin/Windows/Debug/China2DTest.pdb
+Bin/Windows/Debug/China2DTest.dll
+Bin/Windows/Debug/China2D.exe
+Bin/Windows/Debug/China2D.pdb
