第一次创建窗体

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Bin/Windows/Debug/China2DTest.pdb
 Bin/Windows/Debug/China2DTest.dll
 Bin/Windows/Debug/China2D.exe
 Bin/Windows/Debug/China2D.pdb
+/Bin/Windows/Debug/Log
